        * [ADDED]: #3070 Added option in configuration dialog to bypass database dialog completely when dropping file from file manager onto database list.
        * [ADDED]: #3040 Added new entry in context menu of data grid to generate SELECT statement together with WHERE clause containing IN conditions for selected cells.
        * [CHANGE]: DbAndroid plugin has now JAR file embedded and you can get it from Tools menu.
        * [CHANGE]: SQLite version updated to 3.13.0.
        * [CHANGE]: Qt version updated to 5.6.0. Should still compile with 5.3, but binary distributions on homepage will be made with 5.6.
        * [CHANGE]: Foreign key dropdown (when editing FK cell) uses now more readable set of columns and column headers can be resized.
        * [CHANGE]: Column dialog validates scale and precision fields (against INTEGER PRIMARY KEY and against each other).
        * [CHANGE]: Structure tab in table window has now fully named headers in column list.
        * [CHANGE]: Table and View window options moved from Look & Feel configuration page to Data Browsing page.
        * [CHANGE]: All database list options moved to a separate Database List configuration page.
        * [CHANGE]: Window list in main menu -> "View" -> "Window list" is not sorted alphabetically.
        * [BUGFIX]: Not loading Android plugin by default (needs manual load from configuration dialog), which stops the "ADB" error for people not using the plugin.
        * [BUGFIX]: #2927 Several critical bugs fixed and enhancements to table modification algorithm related to foreign keys.
        * [BUGFIX]: Fixed importing from CSV with some of lines containing less fields than defined in header (or in first data row).
        * [BUGFIX]: #2989 Fixed multiline value handling in CSV import plugin.
        * [BUGFIX]: #2921 Fixed empty values as NULL handling in CSV import plugin.
        * [BUGFIX]: #3034 Fixed handling empty string as value for DEFAULT constraint.